Removed unnecessary Dockerfile contents.

--- a/Calculator/Dockerfile
+++ b/Calculator/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:8-jdk-alpine
 EXPOSE 8086
-ARG JAR_FILE=target/Calculator-1.0.jar
-ADD ${JAR_FILE} calculator.jar
+ADD target/Calculator-1.0.jar calculator.jar
 ENTRYPOINT ["java","-jar","calculator.jar"]
